--- a/notebooks/250hPa_Hemispheric_Plot.ipynb
+++ b/notebooks/250hPa_Hemispheric_Plot.ipynb
@@ -36,7 +36,7 @@
     "from siphon.ncss import NCSS\n",
     "\n",
     "# Latest GFS Dataset\n",
-    "cat = TDSCatalog('http://thredds.ucar.edu/thredds/catalog/grib/'\n",
+    "cat = TDSCatalog('https://tds.scigw.unidata.ucar.edu/thredds/catalog/grib/'\n",
     "                 'NCEP/GFS/Global_0p5deg/latest.xml')\n",
     "best_ds = list(cat.datasets.values())[0]\n",
     "ncss = NCSS(best_ds.access_urls['NetcdfSubset'])\n",
@@ -168,12 +168,24 @@
   }
  ],
  "metadata": {
-  "jupytext": {
-   "cell_metadata_filter": "-all",
-   "main_language": "python",
-   "notebook_metadata_filter": "-all"
+  "kernelspec": {
+   "display_name": "Python [conda env:uncc-workshop-2020]",
+   "language": "python",
+   "name": "conda-env-uncc-workshop-2020-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
